--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,38 @@
-node_modules
-lib
-npm-debug.log
-yarn-error.log
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/dist
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+# .vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+package-lock.json
 pnpm-lock.yaml
 
-dist
-package-lock.json
+# 所有.zip 文件
+*.zip
